--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         linear-gradient(90deg, var(--grid) 1px, transparent 1px);
       background-size: calc(100% / 20) calc(100% / 20);
       image-rendering: pixelated; border-radius: 14px;
+      touch-action: none; /* evita zoom al hacer doble tap */
     }
     .hud {
       display: grid; grid-template-columns: repeat(3, 1fr); align-items: center; gap: 8px;
@@ -154,7 +155,243 @@
   </div>
 
   <script>
-    // Código JavaScript del juego omitido por brevedad, se mantiene igual que el anterior mensaje
+    (() => {
+      // -------- Configuración --------
+      const GRID_SIZE = 20;
+      const STEP_MS_START = 150;
+      const STEP_MS_MIN = 65;
+      const SPEEDUP_EVERY = 5;
+      const SPEEDUP_DELTA = 8;
+
+      const canvas = document.getElementById('game');
+      const ctx = canvas.getContext('2d', { alpha: false });
+      const stage = document.getElementById('stage');
+
+      const scoreEl = document.getElementById('score');
+      const bestEl  = document.getElementById('best');
+
+      const btnStart   = document.getElementById('btn-start');
+      const btnPause   = document.getElementById('btn-pause');
+      const btnRestart = document.getElementById('btn-restart');
+
+      const toast = document.getElementById('toast');
+      const toastTitle = document.getElementById('toast-title');
+      const toastSub = document.getElementById('toast-sub');
+      const toastStart = document.getElementById('toast-start');
+      const toastRestart = document.getElementById('toast-restart');
+
+      // Ajuste visual del grid de fondo
+      function updateGridBackground() {
+        const size = Math.min(stage.clientWidth - 20, stage.clientHeight - 20);
+        const cellPx = size / GRID_SIZE;
+        canvas.style.backgroundSize = `${cellPx}px ${cellPx}px';
+      }
+
+      const state = {
+        snake: [{x: 10, y: 10}],
+        dir: {x: 1, y: 0},
+        nextDir: {x: 1, y: 0},
+        food: {x: 15, y: 10},
+        score: 0,
+        best: Number(localStorage.getItem('snake-best') || 0),
+        running: false,
+        paused: false,
+        over: false,
+        stepMs: STEP_MS_START,
+        eaten: 0,
+        lastStepAt: 0
+      };
+      bestEl.textContent = state.best;
+
+      // Utilidades
+      const randInt = (min, max) => Math.floor(Math.random() * (max - min + 1)) + min;
+
+      function placeFood() {
+        let tries = 0;
+        while (tries++ < 1000) {
+          const x = randInt(0, GRID_SIZE - 1);
+          const y = randInt(0, GRID_SIZE - 1);
+          const onSnake = state.snake.some(seg => seg.x === x && seg.y === y);
+          if (!onSnake) { state.food = {x, y}; return; }
+        }
+        // fallback improbable
+        state.food = {x: 0, y: 0};
+      }
+
+      function setDirection(nx, ny) {
+        if (state.dir.x + nx === 0 && state.dir.y + ny === 0) return;
+        state.nextDir = {x: nx, y: ny};
+      }
+
+      // Juego
+      function resetGame() {
+        state.snake = [{x: 10, y: 10}];
+        state.dir = {x: 1, y: 0};
+        state.nextDir = {x: 1, y: 0};
+        state.score = 0;
+        state.stepMs = STEP_MS_START;
+        state.eaten = 0;
+        state.over = false;
+        placeFood();
+        scoreEl.textContent = '0';
+        hideToast();
+      }
+
+      function gameOver() {
+        state.running = false;
+        state.over = true;
+        showToast('Juego terminado', 'Puntaje: ' + state.score, true);
+        try { navigator.vibrate && navigator.vibrate(150); } catch {}
+      }
+
+      function step() {
+        if (!state.running || state.paused || state.over) return;
+        state.dir = state.nextDir;
+
+        const head = state.snake[0];
+        const newHead = {x: head.x + state.dir.x, y: head.y + state.dir.y};
+
+        // Paredes
+        if (newHead.x < 0 || newHead.y < 0 || newHead.x >= GRID_SIZE || newHead.y >= GRID_SIZE) return gameOver();
+        // Cuerpo
+        if (state.snake.some(seg => seg.x === newHead.x && seg.y === newHead.y)) return gameOver();
+
+        state.snake.unshift(newHead);
+
+        const ate = (newHead.x === state.food.x && newHead.y === state.food.y);
+        if (ate) {
+          state.score += 1;
+          scoreEl.textContent = String(state.score);
+          state.eaten += 1;
+          if (state.score > state.best) {
+            state.best = state.score;
+            bestEl.textContent = String(state.best);
+            localStorage.setItem('snake-best', String(state.best));
+          }
+          placeFood();
+          if (state.eaten % SPEEDUP_EVERY === 0) state.stepMs = Math.max(STEP_MS_MIN, state.stepMs - SPEEDUP_DELTA);
+          try { navigator.vibrate && navigator.vibrate(40); } catch {}
+        } else {
+          state.snake.pop();
+        }
+      }
+
+      function drawCell(x, y, color) {
+        const cw = canvas.width / GRID_SIZE;
+        const ch = canvas.height / GRID_SIZE;
+        ctx.fillStyle = color;
+        ctx.fillRect(Math.floor(x * cw), Math.floor(y * ch), Math.ceil(cw), Math.ceil(ch));
+      }
+
+      function draw() {
+        ctx.clearRect(0, 0, canvas.width, canvas.height);
+        drawCell(state.food.x, state.food.y, 'var(--red)');
+        state.snake.forEach((seg, i) => drawCell(seg.x, seg.y, i === 0 ? 'var(--green)' : 'var(--green-dark)'));
+        ctx.globalCompositeOperation = 'overlay';
+        ctx.fillStyle = '#ffffff08';
+        state.snake.forEach(seg => drawCell(seg.x, seg.y, '#ffffff08'));
+        ctx.globalCompositeOperation = 'source-over';
+      }
+
+      function loop(t) {
+        if (state.running && !state.paused && !state.over) {
+          if (!state.lastStepAt) state.lastStepAt = t;
+          const dt = t - state.lastStepAt;
+          if (dt >= state.stepMs) { state.lastStepAt = t; step(); }
+          draw();
+        }
+        requestAnimationFrame(loop);
+      }
+
+      // Controles
+      function start() {
+        if (state.over) resetGame();
+        state.running = true; state.paused = false; hideToast(); state.lastStepAt = 0;
+      }
+      function pauseToggle() {
+        if (!state.running) return;
+        state.paused = !state.paused;
+        if (state.paused) showToast('Pausado', 'Toca continuar', false, true);
+        else { hideToast(); state.lastStepAt = 0; }
+      }
+      function restart() { resetGame(); start(); }
+
+      btnStart.addEventListener('click', start);
+      btnPause.addEventListener('click', pauseToggle);
+      btnRestart.addEventListener('click', restart);
+
+      function showToast(title, sub, showRetry = false, showContinue = false) {
+        toastTitle.textContent = title || '';
+        toastSub.textContent = sub || '';
+        toast.hidden = false;
+        toastStart.textContent = showContinue ? 'Continuar' : 'Jugar';
+        toastStart.hidden = false;
+        toastRestart.hidden = !showRetry;
+      }
+      function hideToast() { toast.hidden = true; }
+      toastStart.addEventListener('click', () => { if (state.over) restart(); else start(); });
+      toastRestart.addEventListener('click', restart);
+
+      // Teclado
+      window.addEventListener('keydown', (e) => {
+        const k = e.key.toLowerCase();
+        if (k === 'arrowup' || k === 'w') setDirection(0, -1);
+        else if (k === 'arrowdown' || k === 's') setDirection(0, 1);
+        else if (k === 'arrowleft' || k === 'a') setDirection(-1, 0);
+        else if (k === 'arrowright' || k === 'd') setDirection(1, 0);
+        else if (k === 'p') pauseToggle();
+        else if (k === 'r') restart();
+      });
+
+      // Botones táctiles (D-Pad)
+      document.querySelectorAll('.dpad [data-dir]').forEach(btn => {
+        btn.addEventListener('click', () => {
+          const dir = btn.getAttribute('data-dir');
+          if (dir === 'up') setDirection(0, -1);
+          if (dir === 'down') setDirection(0, 1);
+          if (dir === 'left') setDirection(-1, 0);
+          if (dir === 'right') setDirection(1, 0);
+        });
+      });
+
+      // Gestos de deslizamiento
+      let touchStart = null;
+      const SWIPE_MIN = 24;
+      stage.addEventListener('touchstart', (e) => {
+        const t = e.changedTouches[0];
+        touchStart = {x: t.clientX, y: t.clientY};
+      }, {passive: true});
+      stage.addEventListener('touchend', (e) => {
+        if (!touchStart) return;
+        const t = e.changedTouches[0];
+        const dx = t.clientX - touchStart.x;
+        const dy = t.clientY - touchStart.y;
+        if (Math.abs(dx) > Math.abs(dy)) {
+          if (Math.abs(dx) > SWIPE_MIN) setDirection(dx > 0 ? 1 : -1, 0);
+        } else {
+          if (Math.abs(dy) > SWIPE_MIN) setDirection(0, dy > 0 ? 1 : -1);
+        }
+        touchStart = null;
+      }, {passive: true});
+
+      // Ajuste del canvas al contenedor
+      function fitCanvas() {
+        const rect = stage.getBoundingClientRect();
+        const size = Math.floor(Math.min(rect.width - 20, rect.height - 20));
+        const cell = Math.max(10, Math.floor(size / GRID_SIZE));
+        canvas.width  = cell * GRID_SIZE;
+        canvas.height = cell * GRID_SIZE;
+        try { updateGridBackground(); } catch {}
+        draw();
+      }
+      window.addEventListener('resize', fitCanvas);
+      const ro = new ResizeObserver(fitCanvas); ro.observe(stage);
+
+      // Inicio
+      fitCanvas();
+      showToast('¡Listo!', 'Presiona Iniciar para jugar');
+      requestAnimationFrame(loop);
+    })();
   </script>
 </body>
 </html>
